# cricket

./: .gitignore  CMakeLists.txt  README.md  callgrind.out.185764  dmp  docker-compose.yaml  fib_callgrind  fib_gprof  fib_me  go.mod  ls_stats_gprof  ls_stats_me  lsington  say_hi_text.dmp
.devcontainer/: Dockerfile  devcontainer.json
examples/: Makefile  a.out  c_funky  c_funky.c  c_signals  c_signals.c  c_system 2  c_system.c  c_timecalls  c_timecalls.c  do_things.c  dwarf.py  extract_name.py  get_seccomp.sh  poke.c  say_hi  say_hi.c  signals  signals.go  signals_child  signals_child.go  src_map  src_map.c  stop.c  tcalls_all.dmp  tcalls_dbg_info.dmp  tcalls_dbg_line.dmp  tcalls_elf.dmp  v2  vibe_check  vibe_check.c  vibe_checkv2.c
outputs/: calls.csv  stat_calls.csv
src/: graph_calls.py  stat.py
src/cricket_c/: main.c
src/cricket_c/profile/: breakpoint.c  peek.c  profile.h  time_functions.c  time_functions.h
src/cricket_c/profiler/: breakpoint.c  breakpoint.h  csv.c  format.c  profiler.h  profiler_cli.h  time_functions.c
src/cricket_c/profiler/src_map/: src_map.c  src_map.h  src_map_dwarf.c
src/cricket_c/ptrace_util/: tracee.c  tracee.h
src/cricket_c/util/: break_table.c  break_table.h  hash_map.c  hash_map.h  instn_table.c  instn_table.h  interval_stack.c  interval_stack.h  src_map.c  src_map.h  validate_offsets.c
src/cricket_go/: main.go  proc.go  symbols.go
src/util/: data_structures.py  rip_elf_instn.py  rip_mem_instn.py
targets/: a.out  fib  fib.c  gmon.out
targets/hello/: go.mod  hello  main.go
(+2 files in other folders)
